--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,69 @@
     transform: rotate(360deg);
   }
 }
+
+.records-per-page {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+.records-per-page label {
+  margin-right: 10px;
+}
+
+.records-per-page select {
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 30px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.table th,
+.table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  text-align: left;
+}
+
+.pagination {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: center; /* 가운데 정렬 */
+}
+
+.page-item {
+  margin-right: 5px;
+}
+
+.page-item a {
+  display: inline-block;
+  padding: 6px 12px;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.page-item a:hover {
+  background-color: #f2f2f2;
+}
+
+.page-item.active a {
+  background-color: #4caf50;
+  color: white;
+}
